		The maximization variable is now shared among all instances from the same
		prototype just like the minimum and maximum variables are.  This doesn't
		effect either NSGA2 or SPEA2.
	Bug fix in VectorSpecies to bug introduced when simulate binary crossover was 
		added: uniform crossover always has zero probability.  Thanks to
		Peter Lanze <pl@INDAL.DE>.
	Updated MersenneTwister and MersenneTwisterFast again
	Added the gpsemantics, klandscapes, lid, ordertree, and royaltree problems by
		James McDermott <jamesmichaelmcdermott@gmail.com> and Luca Manzoni
		<luca.manzoni@disco.unimib.it> as part of http://gpbenchmarks.org/
	ParameterDatabase.removeDeeply is now deprecated.
	New sections added to Manual about integration.
	ec.vector.VectorGene hereby renamed to ec.vector.Vector.  Also the
		default base for ec.vector.VectorGene changed from
		"vector.vect-gene" to "vector.gene".  
		ec.vector.Vector.P_VECTOR_GENE made private and deprecated
		to force the issue.
	Added a little double-checking on reading vector individuals from files
	Added a help message (see  java ec.Evolve -help  )
	Modified the version message to add new contributors
	Fixed bug where parameter files could be loaded as resources ("-from ...")
		only when the resource URL was a file path, not a Java path.  This is
		due to some stupidity on part of Sun's Java URL code.   
	Added ability to specify, in Steady State, the probability that an incoming
		individual will directly replace an individual marked for death as
		opposed to only replacing it if the incoming individual is superior.
	Removed spurious references to "MyDoubleTournamentSelection" in
		regression/steadystatenoerc.params
	Added Random Walk mutation to IntegerVectorSpecies, and moved the default
		mutator to Reset mutation -- it's still the default but you'll get
		a warning if you don't explicitly set it.
	Added ideal individual checking to KLandscapes
	Added additional features to SimpleStatistics