@@ -63,40 +63,51 @@ public class SimpleEvaluator extends Evaluator
             }
         else
             {
-
+            // how many threads do we really need?  No more than the maximum number of individuals in any subpopulation
+            int numThreads = 0;
+            for(int x = 0; x < state.population.subpops.length; x++)
+            	numThreads = Math.max(numThreads, state.population.subpops[x].individuals.length);
+            numThreads = Math.min(numThreads, state.evalthreads);
+            if (numThreads < state.breedthreads)
+            	state.output.warnOnce("Largest subpopulation size (" + numThreads +") is smaller than number of evalthreads (" + state.breedthreads +
+            		"), so fewer evalthreads will be created.");
+            
             int numinds[][] = 
-                new int[state.evalthreads][state.population.subpops.length];
+                new int[numThreads][state.population.subpops.length];
             int from[][] = 
-                new int[state.evalthreads][state.population.subpops.length];
+                new int[numThreads][state.population.subpops.length];
         
-            for(int y=0;y<state.evalthreads;y++)
-                for(int x=0;x<state.population.subpops.length;x++)
+            for(int x=0;x<state.population.subpops.length;x++)
+            	{
+            	// we will have some extra individuals.  We distribute these among the early subpopulations
+            	int individualsPerThread = state.population.subpops[x].individuals.length / numThreads;  // integer division
+                int slop = state.population.subpops[x].individuals.length - numThreads * individualsPerThread;
+				int currentFrom = 0;
+				
+            	for(int y=0;y<numThreads;y++)
                     {
-                    // figure numinds
-                    if (y<state.evalthreads-1) // not last one
-                        numinds[y][x]=
-                            state.population.subpops[x].individuals.length/
-                            state.evalthreads;
-                    else // in case we're slightly off in division
-                        numinds[y][x]=
-                            state.population.subpops[x].individuals.length/
-                            state.evalthreads +
-                        
-                            (state.population.subpops[x].individuals.length -
-                                (state.population.subpops[x].individuals.length /
-                                state.evalthreads)  // note integer division
-                            *state.evalthreads);                    
+                    if (slop > 0)
+                    	{
+                    	numinds[y][x] = individualsPerThread + 1;
+                    	slop--;
+                    	}
+                    else
+                    	numinds[y][x] = individualsPerThread;
+                    
+                    if (numinds[y][x] == 0)
+                    	{
+		            	state.output.warnOnce("More threads exist than can be used to evaluate some subpopulations (first example: subpopulation " + x + ")");
+                    	}
 
-                    // figure from
-                    from[y][x]=
-                        (state.population.subpops[x].individuals.length/
-                        state.evalthreads) * y;
+            		from[y][x] = currentFrom;
+            		currentFrom += numinds[y][x];
                     }
+                }
 
-            Thread[] t = new Thread[state.evalthreads];
+            Thread[] t = new Thread[numThreads];
             
             // start up the threads
-            for(int y=0;y<state.evalthreads;y++)
+            for(int y=0;y<numThreads;y++)
                 {
                 SimpleEvaluatorThread r = new SimpleEvaluatorThread();
                 r.threadnum = y;
@@ -110,7 +121,7 @@ public class SimpleEvaluator extends Evaluator
                 }
 
             // gather the threads
-            for(int y=0;y<state.evalthreads;y++) 
+            for(int y=0;y<numThreads;y++) 
                 try 
                     { 
                     t[y].join(); 
@@ -136,6 +147,7 @@ public class SimpleEvaluator extends Evaluator
         
         Subpopulation[] subpops = state.population.subpops;
         int len = subpops.length;
+        
         for(int pop=0;pop<len;pop++)
             {
             // start evaluatin'!
